--- a/src/assets/_scss/base/_forms.scss
+++ b/src/assets/_scss/base/_forms.scss
@@ -279,6 +279,7 @@
     background-color: transparent;
     font-family: $font-family-secondary;
     text-transform: uppercase;
+    margin: 0;
     @include transition(0.5s);
     &:hover {
       background-color: $dark;
