--- a/src/assets/_scss/base/_page_footer.scss
+++ b/src/assets/_scss/base/_page_footer.scss
@@ -28,7 +28,7 @@
       top: 0;
       left: 20px;
       opacity: 0;
-      @include transition(0.5s);
+      @include transition(opacity, 0.4s);
       &:hover {
         opacity: 1;
       }
