--- a/src/assets/_scss/base/_page_header.scss
+++ b/src/assets/_scss/base/_page_header.scss
@@ -4,7 +4,9 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: $dark;
+  background-color: $white;
+  border-top: 10px solid $blue;
+  box-shadow: 0 0 5px rgba($dark, 0.2);
   z-index: 998;
 }
 
@@ -33,7 +35,7 @@
       padding-left: 40px;
     }
     .nav-link {
-      color: $white;
+      color: $dark;
       position: relative;
       overflow: hidden;
       font-family: $font-family-secondary;
@@ -46,14 +48,14 @@
       @include media-breakpoint-up(lg) {
         padding: 0;
         &::after {
-        content: "";
-        position: absolute;
-        display: block;
-        bottom: 0;
-        left: -80%;
-        width: 100%;
-        height: 2px;
-        background-color: $orange;
+          content: "";
+          position: absolute;
+          display: block;
+          bottom: 0;
+          left: -80%;
+          width: 100%;
+          height: 2px;
+          background-color: $orange;
           @include transition(0.5s);
         }
         &:hover,
